--- a/jeitinho.css
+++ b/jeitinho.css
@@ -67,4 +67,21 @@
         width: 200px;
         height: 200px;
     }
-   
+    
+    .formt{
+        border: 10px ridge rgba(30, 143, 255, 0.389);
+        width: 470px;
+        height: 300px;
+      
+    }
+    
+    .mods{
+        margin-left: 50px;
+        margin-top: 10px;
+        
+    }
+    
+    .submt {
+        margin-left: 100px;
+        margin-top: 10px;
+    }
