--- a/jeitinho.css
+++ b/jeitinho.css
@@ -33,7 +33,7 @@
     
     }
     .contContato {
-        font-size: 1.8em;
+        font-size: 30px;
         display: grid;
         text-align: center;
         align-items: center;
@@ -42,14 +42,7 @@
         height: 50px;
         background-color: rgba(30, 143, 255, 0.389);
         }
-    
-    .container {
-        width: 1000px;
-        height: auto;
-        border-radius: 10px;
-        gap: 10px;
-        padding: 20px;
-    }
+
 
     .card {
         width: 1000px;
@@ -68,20 +61,62 @@
         height: 200px;
     }
     
-    .formt{
+    form {
+        background-color: rgba(30, 143, 255, 0.108);
+        margin: 0 auto;
+        font-family: 'Times New Roman';
+        font-size: 1.2em;
         border: 10px ridge rgba(30, 143, 255, 0.389);
-        width: 470px;
-        height: 300px;
-      
+        width: 350px;
+        height: auto; 
+        text-align: center;  
+        padding: .5em;
+    }
+
+    form input {
+        border-radius: .3em;
+        border-color: rgba(30, 143, 255, 0.389);
+        box-shadow: 1px 1px 1px 1px black;
+        width: 70%;
+    }
+
+    form input:required {
+        border-color: brown;
+    }
+    form input:required:valid{
+        border-color: rgba(30, 143, 255, 0.389);
+    }
+
+    form textarea:required{
+        border-color: brown;
+    }
+    form textarea:required:valid{
+        border-color: rgba(30, 143, 255, 0.389);
+    }
+
+    #nome{
+        font-family: 'Franklin Gothic Medium';
+        font-size: .8em;
+    }
+
+    form label {
+        width: 150px;
+    }
+
+    form textarea{
+        font-family: 'Franklin Gothic Medium';
+        font-size: .8em;
+        width: 90%;
+        border-radius: .3em;
+        box-shadow: 1px 1px 1px 1px black;
+        border-color: rgba(30, 143, 255, 0.389);
+    }
+    button{
+        background-color: rgba(30, 143, 255, 0.389);
+        font-size: 20px;
+        font-family: 'Times New Roman';
+        border-radius: .5rem;
+        box-shadow: 1px 1px 1px 1px black;
+        width: 50%;
     }
     
-    .mods{
-        margin-left: 50px;
-        margin-top: 10px;
-        
-    }
-    
-    .submit {
-        margin-left: 100px;
-        margin-top: 10px;
-    }
