--- a/jeitinho.css
+++ b/jeitinho.css
@@ -15,7 +15,7 @@
     .card{
         margin: .5em;
         width: min(100%, 75em);
-        flex: 35%;
+        flex: 50%;
         font-size: 1.3em;
     }      
 
@@ -44,6 +44,17 @@
     
     h1, h2{
         font-size: 1.6em;
+    }
+
+    @media screen and (min-width: 481px) and (max-width: 768px){
+        .container{flex: 40%;
+        font-size: 1.2em;}
+    }
+
+    
+    @media screen and (max-width: 768px){
+        .container{flex: 20%;
+        font-size: 1em;}
     }
 
 /*---- Contato----*/
